--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "backend"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 default-run = "backend"
 
 [[bin]]
@@ -21,3 +21,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 utoipa = { version = "5.0", features = ["axum_extras"] }
 utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
+dotenvy = "0.15"
+env_logger = "0.11"
+log = "0.4"
