--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -33,5 +33,6 @@ COPY --from=builder /app/.next/static ./.next/static
 COPY --from=builder /app/public ./public
 
 EXPOSE 3000
+EXPOSE 8080
 
 CMD ["bun", "server.js"]
