--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -32,7 +32,9 @@ COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
 COPY --from=builder /app/public ./public
 
+ENV HOSTNAME=0.0.0.0
+ENV PORT=3000
+
 EXPOSE 3000
-EXPOSE 8080
 
 CMD ["bun", "server.js"]
