--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -15,13 +15,13 @@ path = "scripts/generate_openapi.rs"
 
 [dependencies]
 axum = "0.8"
-clickhouse = "0.14"
+clickhouse = { version = "0.14", features = ["rustls-tls"] }
 dotenvy = "0.15"
 env_logger = "0.11"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.8.6", features = ["runtime-tokio", "native-tls", "postgres", "chrono", "uuid", "migrate"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }
 tokio = { version = "1", features = ["full"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors"] }
