--- a/apps/backend/.env.defaults
+++ b/apps/backend/.env.defaults
@@ -1,7 +1,7 @@
 # for docker compose
-PG_URL=postgresql://postgres:password@postgres:5432/exchange
-CH_URL=http://clickhouse:8123
+# PG_URL=postgresql://postgres:password@postgres:5432/exchange
+# CH_URL=http://clickhouse:8123
 
 # for local development
-# PG_URL=postgresql://postgres:password@localhost:5432/exchange
-# CH_URL=http://localhost:8123
+PG_URL=postgresql://postgres:password@localhost:5432/exchange
+CH_URL=http://localhost:8123
