--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0"
 axum = "0.8"
+bigdecimal = "0.4.9"
 chrono = { version = "0.4", features = ["serde"] }
 clickhouse = { version = "0.14", features = ["rustls-tls"] }
 dotenvy = "0.15"
@@ -19,7 +20,7 @@ env_logger = "0.11"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate", "bigdecimal"] }
 tokio = { version = "1", features = ["full"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors"] }
