--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -13,10 +13,11 @@ path = "src/main.rs"
 anyhow = "1.0"
 axum = { version = "0.8", features = ["ws"] }
 bigdecimal = "0.4.9"
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde", "clock"] }
 clickhouse = { version = "0.14", features = ["rustls-tls"] }
 dotenvy = "0.15"
 env_logger = "0.11"
+futures = "0.3"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -25,7 +26,7 @@ thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors"] }
-utoipa = { version = "5.0", features = ["axum_extras"] }
+utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
 utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
