--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -35,3 +35,4 @@ futures = "0.3"
 reqwest = { version = "0.12", features = ["json"] }
 testcontainers = "0.25.0"
 testcontainers-modules = { version = "0.13.0", features = ["clickhouse", "postgres"] }
+tokio-tungstenite = "0.28"
