--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -31,8 +31,21 @@ utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
 [dev-dependencies]
+criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
 futures = "0.3"
 reqwest = { version = "0.12", features = ["json"] }
 testcontainers = "0.25.0"
 testcontainers-modules = { version = "0.13.0", features = ["clickhouse", "postgres"] }
 tokio-tungstenite = "0.28"
+
+[[bench]]
+name = "matching_benchmarks"
+harness = false
+
+[[bench]]
+name = "balance_benchmarks"
+harness = false
+
+[[bench]]
+name = "latency_benchmarks"
+harness = false
