--- a/apps/bots/.env.defaults
+++ b/apps/bots/.env.defaults
@@ -1,1 +1,14 @@
 API_URL=http://localhost:8888
+
+# Exchange Configuration
+EXCHANGE_URL=http://localhost:8001
+
+# Hyperliquid Configuration
+COIN=BTC
+
+# Market Configuration
+MARKET_ID=BTC/USDC
+
+# Bot Addresses
+MAKER_ADDRESS=maker_bot
+TAKER_ADDRESS=taker_bot
