--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -20,22 +20,9 @@ RUN apt-get update && apt-get install -y \
     postgresql-client \
     python3 \
     python3-pip \
-    zsh \
     && rm -rf /var/lib/apt/lists/*
 
-# Create a non-root user
-ARG USERNAME=vscode
-ARG USER_UID=1000
-ARG USER_GID=$USER_UID
-RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME -s /bin/zsh \
-    && apt-get update \
-    && apt-get install -y sudo \
-    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
-    && chmod 0440 /etc/sudoers.d/$USERNAME \
-    && rm -rf /var/lib/apt/lists/*
-
-# Set the Rustup and Cargo home directories.
+# Set the Rustup and Cargo home directories (will be accessible to all users).
 ENV RUSTUP_HOME=/usr/local/rustup \
     CARGO_HOME=/usr/local/cargo \
     PATH=/usr/local/cargo/bin:$PATH
@@ -44,8 +31,9 @@ ENV RUSTUP_HOME=/usr/local/rustup \
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.90 \
     && chmod -R a+w $RUSTUP_HOME $CARGO_HOME
 
-# Install Rust tools
-RUN cargo install just sqlx-cli --no-default-features --features rustls,postgres
+# Install Rust tools (separately to avoid build failures affecting each other)
+RUN cargo install sqlx-cli --no-default-features --features rustls,postgres
+RUN cargo install just
 
 # Install Node.js 22
 RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
@@ -65,14 +53,9 @@ RUN curl https://clickhouse.com/ | sh \
 # Install pgcli (better PostgreSQL CLI)
 RUN pip3 install --break-system-packages pgcli
 
-# Create directories for volume mounts
-RUN mkdir -p /var/lib/docker /usr/local/cargo/registry /usr/local/rustup
-
-# Set up user permissions
-RUN chown -R $USERNAME:$USERNAME /usr/local/cargo /usr/local/rustup
-
-# Switch to non-root user
-USER $USERNAME
+# Create directories for volume mounts and make them accessible to all users
+RUN mkdir -p /var/lib/docker /usr/local/cargo/registry /usr/local/rustup \
+    && chmod -R 777 /usr/local/cargo /usr/local/rustup
 
 # Set the working directory inside the container.
 WORKDIR /workspace
