--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -15,6 +15,11 @@ runs:
     - name: Install Just
       uses: extractions/setup-just@v2
 
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
+      with:
+        enable-cache: true
+
     - name: Cache Rust dependencies
       uses: Swatinem/rust-cache@v2
       with:
