--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -15,7 +15,6 @@ axum.workspace = true
 bigdecimal.workspace = true
 chrono.workspace = true
 clickhouse.workspace = true
-config = { workspace = true, features = ["toml"] }
 dotenvy.workspace = true
 env_logger.workspace = true
 futures.workspace = true
@@ -25,6 +24,7 @@ serde_json.workspace = true
 sqlx.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+toml.workspace = true
 tower-http.workspace = true
 utoipa.workspace = true
 utoipa-swagger-ui.workspace = true
