--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --fix",
-    "format": "prettier --write .",
-    "typecheck": "tsc --noEmit",
-    "generate-openapi": "openapi-typescript ../../packages/shared/openapi.json -o ./src/lib/types/openapi.ts"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@exchange/sdk": "file:../../packages/sdk-typescript",
@@ -39,10 +37,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
-    "openapi-typescript": "^7.10.1",
-    "prettier": "^3.4.2",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "tw-animate-css": "^1.4.0"
   }
 }
