--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ tower = "0.5"
 tower-http = { version = "0.6", features = ["cors"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+ts-rs = { version = "11.1", features = ["serde-compat", "chrono-impl", "uuid-impl"] }
 utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
 utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
 uuid = { version = "1.11", features = ["v4", "serde"] }
