--- a/packages/sdk-python/pyproject.toml
+++ b/packages/sdk-python/pyproject.toml
@@ -2,7 +2,6 @@
 name = "exchange-sdk"
 version = "0.1.0"
 description = "Python SDK for the exchange API"
-readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "httpx>=0.27.0",
@@ -16,6 +15,7 @@ dev = [
     "pytest-asyncio>=0.23.0",
     "black>=24.0.0",
     "ruff>=0.3.0",
+    "datamodel-code-generator[http]>=0.25.0",
 ]
 
 [build-system]
