--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       retries: 5
     networks:
       - exchange-network
+    restart: unless-stopped
 
   # ClickHouse
   clickhouse:
@@ -39,6 +40,7 @@ services:
       retries: 5
     networks:
       - exchange-network
+    restart: unless-stopped
 
   # Backend
   backend:
