--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,7 @@
     "@turnkey/react-wallet-kit": "^1.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "immer": "^10.2.0",
     "lucide-react": "^0.546.0",
     "next": "16.0.1",
